[tool.poetry]
name = "this-is-me"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pyvirtualcam = "0.12.0"
sounddevice = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
